--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 
         <!-- MOD Özellikleri -->
         <div class="mod-features">
-          <h4 style="color: #6effb2; margin: 15px 0 10px 0;">Özellikler:</h4>
+          <h4 style="color: #6effb2; margin: 15px 0 10px 0;">MSP2 MOD</h4>
           <ul>
             <li>Gelişmiş kullanıcı arayüzü</li>
-            <li>Ek özellikler ve araçlar</li>
-            <li>Performans iyileştirmeleri</li>
-            <li>Özel modifikasyonlar</li>
+            <li>Günlük görev tamamlama</li>
+            <li>DressUp otomatik oynama</li>
+            
           </ul>
         </div>
 
@@ -125,7 +125,7 @@
 
         <!-- MSP2 Troll Başlığı ve Özellikleri -->
         <div class="mod-features" style="margin-top: 30px;">
-          <h4 style="color: #6effb2; margin: 15px 0 10px 0;">MSP2 Troll:</h4>
+          <h4 style="color: #6effb2; margin: 15px 0 10px 0;">MSP2 Troll</h4>
           <ul>
             <li>🎯 <strong>Takip Et:</strong> Seçili kullanıcıların hareketlerini kopyala</li>
             <li>💬 <strong>Mesaj Taklit:</strong> Seçili kullanıcıların mesajlarını kopyala</li>
